--- a/Blog.API/appsettings.json
+++ b/Blog.API/appsettings.json
@@ -1,12 +1,11 @@
 {
   "DatabaseSqlCon": "Data Source=DESKTOP-JIFTFVO\\UGURGUR;Initial Catalog=BlogDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-  "WebApi": {
-    "BaseUrl": "https://localhost:7047/api/"
-  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
